# sharp

./: README.md  package.oo.yaml  pyproject.toml
flows/batch-processing/: flow.oo.yaml
flows/flow-1/: .flow.ui.oo.json  flow.oo.yaml
flows/grey-scale/: .flow.ui.oo.json  flow.oo.yaml
flows/image-process/: .flow.ui.oo.json  flow.oo.yaml
slotflows/+slotflow#2/: .slotflow.ui.oo.json  slotflow.oo.yaml
tasks/Blur/: index.ts  task.oo.yaml
tasks/Flip/: index.ts  task.oo.yaml
tasks/Flop/: index.ts  task.oo.yaml
tasks/GreyScale/: main.ts  task.oo.yaml
tasks/ReadImage/: index.ts  task.oo.yaml
tasks/ResizeImage/: index.ts  task.oo.yaml
tasks/Rotate/: index.ts  task.oo.yaml
tasks/Sharpen/: index.ts  task.oo.yaml
tasks/image-filter/: main.ts  task.oo.yaml
tasks/save_image/: main.ts  task.oo.yaml
